# FM_Tools

./: .gitignore  README.md  intake_day.py  optimise_coaches.py  player_scan.py  preview_day.py  pyproject.toml  scan_coaches.py  scan_players.py
core/: __init__.py  attributes.py  fm_process.py  html_report.py  platform.py  platform_support.py  player_memory.py  role_definitions.py  role_scoring.py  roles.py  screen_config.py  screen_probe.py  squad_data.py  ui_automation.py  uids.py
core/memory/: __init__.py  cache.py  person.py  players.py  process.py  session.py  squad.py  staff.py
core/scouting/: __init__.py  html.py  money.py  shortlists.py
core/scouting/players/: __init__.py  attributes.py  role_definitions.py  role_scoring.py  roles.py
core/scouting/staff/: __init__.py  optimiser.py  roles.py  shortlist.py
core/ui/: __init__.py  input.py  screen.py  screen_config.py
tools/: __init__.py  calibration.py  squad.py
