[project]
name = "FM_Intake_Reloader"
version = "0.1.0"
description = "A small automation project for Football Manager 24 youth intake reloading."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.0.2",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54; sys_platform == 'win32'",
    "pymem>=1.14.0; sys_platform == 'win32'",
    "python-xlib>=0.33; sys_platform == 'linux'",
]
